Fix blurry fonts
Fixed blurry fonts when using fractional scaling in KDE.  Using Qt's
built-in fractional scaling, fonts end up blurry, but they are not
blurry when setting the zoom level in qtwebengine.

Also changed the font size in css from "smaller" to "10pt".  The
"smaller" size is still blurry even using the zoom factor instead of
fractional scaling, while the 10pt font size is not blurry.

--- a/sm_web_timer.css
+++ b/sm_web_timer.css
@@ -2,7 +2,7 @@ body {
   color: #dddddd;
   background-color: #000000;
   font-family: "ITC Avant Garde Gothic", "Century Gothic", Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
-  font-size: smaller;
+  font-size: 10pt;
 }
 
 table {
@@ -30,7 +30,7 @@ table tr:nth-child(odd) th, table tr:nth-child(odd) td {
 table tr:nth-child(even) th, table tr:nth-child(even) td {
 }
 
-thead th {
+Thead th {
   text-align: left;
   position: sticky;
   top: 0;
